# homework

./: .travis.yml  CMakeLists.txt  appveyor.yml  hist.c  hist.h  main.c  main.cpp  test_hist.cpp
include/: sequence.h
scr/: input.c  paral_sequence.c  static_sequence.c  ~$input.c
tests/: test_input.cpp  test_stat_dim_lib.cpp
tests/data_test/: test_file.txt
